--- a/charts/agent/tests/secure_light_config_test.yaml
+++ b/charts/agent/tests/secure_light_config_test.yaml
@@ -80,6 +80,45 @@ tests:
               enabled: false
     template: configmap.yaml
 
+  - it: Testing if certain settings set to false for agent version latest
+    set:
+      image:
+        tag: latest
+      sysdig:
+        accessKey: AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE
+        settings:
+          feature:
+            mode: secure_light
+      secure:
+        enabled: true
+    asserts:
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            drift_control:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            drift_killer:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            falcobaseline:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            memdump:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            network_topology:
+              enabled: false
+    template: configmap.yaml
+
   - it: Testing if certain settings set to false for agent version > 12.18.x
     set:
       image:
