Revert "update tests"
This reverts commit be4d08cc77556fb8c6cf4df0c82ebe5261d28495.

--- a/charts/agent/tests/secure_light_config_test.yaml
+++ b/charts/agent/tests/secure_light_config_test.yaml
@@ -149,6 +149,11 @@ tests:
       - matchRegex:
           path: data['dragent.yaml']
           pattern: |-
+            memdump:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             network_topology:
               enabled: false
     template: configmap.yaml
@@ -179,6 +184,11 @@ tests:
           path: data['dragent.yaml']
           pattern: |-
             falcobaseline:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
+            memdump:
               enabled: false
       - matchRegex:
           path: data['dragent.yaml']
