--- a/charts/agent/tests/secure_enable_test.yaml
+++ b/charts/agent/tests/secure_enable_test.yaml
@@ -129,6 +129,11 @@ tests:
       - matchRegex:
           path: data['dragent.yaml']
           pattern: |-
+            memdump:
+              enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             network_topology:
               enabled: false
       - notMatchRegex:
