feat(node-analyzer): override platform scanning logic

--- a/charts/node-analyzer/templates/configmap-host-scanner.yaml
+++ b/charts/node-analyzer/templates/configmap-host-scanner.yaml
@@ -39,6 +39,9 @@ data:
   {{- if .Values.nodeAnalyzer.hostScanner.vulnerabilityDBVersion }}
   vuln_db_version: {{ .Values.nodeAnalyzer.hostScanner.vulnerabilityDBVersion | quote }}
   {{- end }}
+  {{- if .Values.nodeAnalyzer.hostScanner.disablePlatformScanning }}
+  disable_platform_scanning: {{ .Values.nodeAnalyzer.hostScanner.disablePlatformScanning | quote }}
+  {{- end }}
   {{- if .Values.nodeAnalyzer.hostScanner.scanContainers.enabled }}
   {{- if .Values.nodeAnalyzer.hostScanner.scanContainers.dockerSocketPath }}
   docker_socket_path: {{ .Values.nodeAnalyzer.hostScanner.scanContainers.dockerSocketPath | quote}}
