--- a/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
@@ -878,6 +878,12 @@ spec:
                 name: {{ .Release.Name }}-host-scanner
                 key: vuln_db_version
                 optional: true
+          - name: DISABLE_PLATFORM_SCANNING
+            valueFrom:
+              configMapKeyRef:
+                name: {{ .Release.Name }}-host-scanner
+                key: disable_platform_scanning
+                optional: true
           - name: TMPDIR
             value: "/tmp"
           - name: PROBES_PORT
