--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -85,7 +85,7 @@ replicaCount: 2
 # E.g. if `onPremCompatibilityVersion=6.2`, we ensure that the image
 # tag is < 0.5.0 for both the Runtime Status Integrator and the Image SBOM
 # Extractor.
-# onPremCompatibilityVersion: "6.2"
+onPremCompatibilityVersion:
 
 # Can be set to false to allow insecure connections to the Sysdig backend,
 # such as for on-premise installs that use self-signed certificates.
