Explicitly naming the prometheus metrics port in the agent daemonset
In order for the prometheus operator to scrape agent health metrics
from the agent, the port exposing these metrics must be named in the
daemonset's podspec. This commit will provide that port name when
agent.sysdig.settings.prometheus_exporter.enabled is true. It can
also account for non-default ports.

Testing: added a unit test; manually edited a daemonset in a live
cluster to ensure that the prometheus operator really does pick up the
metrics using a PodMonitor.

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -230,6 +230,11 @@ spec:
             - name: SSL_CERT_FILE
               value: /opt/draios/certificates/{{- include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl) -}}
             {{- end }}
+          {{- if and (hasKey .Values.sysdig.settings "prometheus_exporter") (.Values.sysdig.settings.prometheus_exporter.enabled) }}
+          ports:
+            - containerPort: {{ regexFind "[0-9]+$" (default "0.0.0.0:9544" .Values.sysdig.settings.prometheus_exporter.listen_url) }}
+              name: metrics
+          {{- end }}
           readinessProbe:
             {{- if eq (include "agent.enableHttpProbes" .) "true" }}
             httpGet:
